feat: 支持中英文档双语

--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "dist/main.js",
   "author": "pandapls",
+  "readme": "README.md",
   "bin": {
     "nb-cli": "./dist/main.js"
   },
   "files": [
     "dist",
     "bin",
-    "README.md"
+    "README.md",
+    "README.zh.md"
   ],
   "keywords": [
     "cli",
     "template",
-    "project"
+    "project",
+    "react",
+    "vue"
   ],
   "repository": {
     "type": "git",
