--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:cli": "jest tests/cli",
+    "test:commands": "jest tests/commands",
+    "test:utils": "jest tests/utils",
+    "test:templates": "jest tests/templates"
   },
   "license": "ISC",
   "dependencies": {
@@ -53,7 +60,10 @@
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
     "@types/inquirer": "^9.0.7",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.8.2"
   }
 }
